@@ -32,7 +32,7 @@ LinkingTo:
     Rcpp,
     testthat
 NeedsCompilation: yes
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.2
 Collate:
     'HmdbMetabolitesConn.R'
     'HmdbMetabolitesEntry.R'
